--- a/JUNO_Verification_Tool.html
+++ b/JUNO_Verification_Tool.html
@@ -2,8 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <title>JUNO Verifcation Tool</title>
-        <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
     <body>
         <div class="container">
@@ -252,7 +251,7 @@
                                 <button type="button" class="btn btn-primary">Verify Track</button>
                                 <button type="button" class="btn btn-secondary">Download Digital Booklet</button>
                                 <button type="button" class="btn btn-light">Play Track</button>
-                                <button type="button" class="btn btn-light">Download Track</button
+                                <button type="button" class="btn btn-light">Download Track</button>
                             </p>
                         </div>
                     </div>
@@ -268,7 +267,7 @@
                                 <button type="button" class="btn btn-primary">Verify Track</button>
                                 <button type="button" class="btn btn-secondary">Download Digital Booklet</button>
                                 <button type="button" class="btn btn-light">Play Track</button>
-                                <button type="button" class="btn btn-light">Download Track</button
+                                <button type="button" class="btn btn-light">Download Track</button>
                             </p>
                         </div>
                     </div>
