--- a/JUNO_Verification_Tool.html
+++ b/JUNO_Verification_Tool.html
@@ -477,7 +477,8 @@
                                 <button type="button" class="btn btn-light">Download Track</button>
                             </p>
                         </div>
-                    
+                        </div>
+                        <br>
                         <h4>
                             <button type="button" class="btn btn-primary">Verify</button>
                             Media Files
@@ -495,7 +496,7 @@
                                 <button type="button" class="btn btn-seconday">Download Permision E-Mail</button>
                             </div>
                         </div>
-                    </div>
+                    
                         <br>
                         <h4>37 - Album Artwork of the Year</h4>
                         <p>
@@ -547,6 +548,14 @@
                             <button type="button" class="btn btn-secondary">Edit</button>
                             <button type="button" class="btn btn-primary">Verify</button>
                             <strong>Where To Purchase Single/EP/Album Online: </strong><a href="https://itunes.apple.com/ca/album/christmas-caravan/id1268872402" target="_blank">https://itunes.apple.com/ca/album/christmas-caravan/id1268872402</a>
+                        </p>
+                        <p>
+                            <button type="button" class="btn btn-secondary">Edit</button>
+                            <strong>Digital Distributor: </strong>
+                        </p>
+                        <p>
+                            <button type="button" class="btn btn-secondary">Edit</button>
+                            <strong>Physical Distributor: </strong>
                         </p>
                         <h4>
                             <button type="button" class="btn btn-primary">Verify</button>
